--- a/web/src/main/resources/scss/tableview.scss
+++ b/web/src/main/resources/scss/tableview.scss
@@ -1,5 +1,6 @@
 @use 'colors';
 @use 'z-index';
+@import 'colorMap';
 $emptyHeight: 212px;
 $deleteAddTime: 250ms;
 $deleteAddTransition: cubic-bezier(0.4, 0.0, 0.2, 1);
@@ -63,7 +64,7 @@ $deleteAddTransition: cubic-bezier(0.4, 0.0, 0.2, 1);
 
 		td, th {
 			border-width: 0 1px 1px 0;
-			border-color: colors.$black-12;
+			border-color: map-get($neutrals, "300");
 			border-style: solid;
 			box-sizing: border-box;
 			max-width: 180px;
@@ -161,7 +162,7 @@ $deleteAddTransition: cubic-bezier(0.4, 0.0, 0.2, 1);
 		}
 
 		.highlighted {
-			background-color: colors.$purple-highlight;
+			background-color: map-get($purples, "100");;
 		}
 
 		.values {
@@ -177,7 +178,7 @@ $deleteAddTransition: cubic-bezier(0.4, 0.0, 0.2, 1);
 					padding: 0;
 					position: sticky;
 					top: 0;
-					background: colors.$tableview-header;
+					background: map-get($neutrals, "200");
 
 					.content {
 						text-align: center;
