--- a/web/src/main/resources/scss/dialog-styles.scss
+++ b/web/src/main/resources/scss/dialog-styles.scss
@@ -1711,23 +1711,21 @@ $shadow-card-hover: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,
 			}
 		}
 
-	@media screen and (max-width: 984px) {
-		.calcChooser {
-			width: 480px;
-			padding: 24px 12px;
-
-            .title {
-            	height: 36px;
-            	font-size: 140%;
-            	line-height: 36px;
-            	margin-bottom: 24px;
-            }
-		}
+	.calcChooser.twoRows {
+		width: 480px;
+		padding: 24px 12px;
 	}
 
-	@media screen and (max-width: 480px) {
-		.calcChooser {
-			width: 328px;
+	.calcChooser.threeRows {
+		width: 376px;
+	}
+
+	.calcChooser.twoRows, .calcChooser.threeRows {
+		.title {
+			height: 36px;
+			font-size: 140%;
+			line-height: 36px;
+			margin-bottom: 24px;
 		}
 	}
 
