MOW-1416 Draft: Font Awesome for Mebis

--- a/web/src/main/resources/org/geogebra/web/resources/html/partials/vendor-scripts-mebis.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/partials/vendor-scripts-mebis.html
@@ -91,3 +91,5 @@ body {
   --ggb-selection-color: #00a8d533;
 }
 </style>
+<link href="./fa/css/fontawesome.min.css" rel="stylesheet">
+<link href="./fa/css/regular.min.css" rel="stylesheet">
