--- a/web/src/main/resources/scss/menu-styles.scss
+++ b/web/src/main/resources/scss/menu-styles.scss
@@ -61,7 +61,7 @@ $menuWidth: 320px;
 				&:hover {
 					background-color: neutral(200);
 				}
-				.gwt-Image {
+				.gwt-Image, .fa-regular {
 					vertical-align: middle;
 					display: inline-block;
 					width: 24px;
